@@ -66,7 +66,7 @@ function (
 	 * Update the global and palette transforms of our posed joints based on the current local joint transforms.
 	 */
 	SkeletonPose.prototype.updateTransforms = function () {
-		for ( var i = 0; i < this._skeleton._joints.length; i++) {
+		for (var i = 0; i < this._skeleton._joints.length; i++) {
 
 			var parentIndex = this._skeleton._joints[i]._parentIndex;
 			if (parentIndex !== Joint.NO_PARENT) {
@@ -77,7 +77,7 @@ function (
 				this._globalTransforms[i].matrix.copy(this._localTransforms[i].matrix);
 			}
 
-			/* 
+			/*
 			 * At this point we have a local->model space transform for this joint, for skinning we multiply this by the
 			 * joint's inverse bind pose (joint->model space, inverted). This gives us a transform that can take a
 			 * vertex from bind pose (model space) to current pose (model space).
@@ -85,6 +85,7 @@ function (
 			Matrix4x4
 				.combine(this._globalTransforms[i].matrix, this._skeleton._joints[i]._inverseBindPose.matrix, this._matrixPalette[i]);
 		}
+
 		this.firePoseUpdated();
 	};
 
